--- a/apps/transaction/templates/invoice.html
+++ b/apps/transaction/templates/invoice.html
@@ -76,10 +76,16 @@
             <td>{{ invoice_data.quantity }}</td>
             <td>{{ invoice_data.product.unit }}</td>
             <td>{{ invoice_data.product.price }}</td>
-            <td>{{ invoice_data.total_price }}bbb </td>
+            <td>{{ invoice_data.total_price }} </td>
         </tr>
 
     </table>
+    {#      <tfoot>#}
+{#        <tr>#}
+{#            <td colspan="4">Итого:</td>#}
+{#            <td class="total-cell"></td>#}
+{#        </tr>#}
+{#    </tfoot>#}
 
     <div class="distributor-info">
         <h2>Информация о дистрибьюторе</h2>
