реализовала возможность метод пост несколтких товаров в одной накаладной

--- a/apps/transaction/templates/invoice.html
+++ b/apps/transaction/templates/invoice.html
@@ -17,6 +17,10 @@
             text-align: right;
             margin-bottom: 20px;
         }
+        .id {
+            text-align: right;
+            margin-bottom: 20px;
+        }
 
         h1 {
             text-align: center;
@@ -59,11 +63,16 @@
 <body>
 
     <div class="company-info">
+        <p>Номер накладной</p>
+        <h2>{{ invoice_data.identification_number }}</h2>
+
+    </div>
+
+    <div class="id-info">
         <h2>ОсОО 'Пивоваренная компания KOLOS'</h2>
         <p>улица П. Тольятти, дом 8, Кара-Балта 722000</p>
         <p>Телефон: +996 312 357 182</p>
     </div>
-
     <h1>Накладная</h1>
 
 
