--- a/apps/transaction/templates/return_invoice.html
+++ b/apps/transaction/templates/return_invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Накладная</title>
+    <title>Возврат</title>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@500;700&display=swap");
 
@@ -21,14 +21,13 @@
             text-align: left;
             margin-bottom: 20px;
         }
-
     .date{
         text-align: left;
 
     }
-    h1 {
-        text-align: center;
-    }
+        h1 {
+            text-align: center;
+        }
 
     table {
         width: 100%;
@@ -65,8 +64,10 @@
     </style>
 </head>
 <body>
-    <h2 class="date">Дата продажи: {{ invoice_data.sale_date|date:"d.m.Y" }}</h2>
 
+
+
+    <h2 class="date">Дата возврата: {{ return_invoice_data.return_date|date:"d.m.Y" }}</h2>
 
     <div class="company-info">
         <h2>ОсОО 'Пивоваренная компания KOLOS'</h2>
@@ -76,38 +77,43 @@
 
         <div class="id">
         <p>Номер накладной:</p>
-        <h2>{{ invoice_data.identification_number}}</h2>
+        <h2>{{ return_invoice_data.identification_number}}</h2>
 
     </div>
 
-    <h1>Накладная</h1>
+    <h1>Накладная на Возврат товара</h1>
 
 
 <table>
     <thead>
+
         <tr>
             <th>Продукт</th>
             <th>Единица измерения</th>
             <th>Количество</th>
             <th>Цена</th>
             <th>Сумма</th>
+            <th>Состояние</th>
+
         </tr>
     </thead>
     <tbody>
-        {% for item in invoice_data.products_invoice %}
+        {% for item in return_invoice_data.products_return_invoice %}
             <tr>
                 <td>{% if item.name %}{{ item.name }}{% endif %}</td>
                 <td>{% if item.unit %}{{ item.unit }}{% endif %}</td>
                 <td>{% if item.quantity %}{{ item.quantity }}{% endif %}</td>
                 <td>{% if item.price %}{{ item.price }}{% endif %}</td>
                 <td>{% if item.total_price %}{{ item.total_price }}{% endif %}</td>
+                <td>{% if item.state %}{{ item.state }}{% endif %}</td>
+
             </tr>
         {% endfor %}
     </tbody>
     <tfoot>
         <tr>
             <td colspan="4" style="text-align: right;">Итого:</td>
-            <td id="totalAmount">{{ invoice_data.total_amount }}</td>
+            <td id="totalAmount">{{ return_invoice_data.total_amount }}</td>
         </tr>
     </tfoot>
 
@@ -118,8 +124,8 @@
 
     <div class="distributor-info">
         <h2>Информация о дистрибьюторе</h2>
-        <p>Имя: {{ invoice_data.distributor.name }}</p>
-        <p>Контакт: {{ invoice_data.distributor.contact }}</p>
+        <p>Имя: {{ return_invoice_data.distributor.name }}</p>
+        <p>Контакт: {{ return_invoice_data.distributor.contact }}</p>
     </div>
 
     <div class="signatures">
