--- a/apps/transaction/templates/return_invoice.html
+++ b/apps/transaction/templates/return_invoice.html
@@ -36,7 +36,7 @@
             text-align: center;
             padding: 8px;
             word-wrap: break-word;
-            max-width: 100px;
+            /*max-width: 100px;*/
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
@@ -62,6 +62,12 @@
     tfoot {
         background-color: #f2f2f2;
         font-weight: bold;
+    }
+    .underline{
+        display:inline-block;
+        width: 25ch;
+        border-bottom: 1px solid black;
+        margin-left: 1ch;
     }
     </style>
 </head>
@@ -132,11 +138,11 @@
 
     <div class="signatures">
         <div class="company-signature">
-            <p>Подпись представителя компании: __________________________</p>
+            <p>Подпись представителя компании: <span class="underline"></span></p>
         </div>
 
         <div class="distributor-signature">
-            <p>Подпись дистрибьютора: __________________________</p>
+            <p>Подпись дистрибьютора: <span class="underline"></span></p>
         </div>
     </div>
 <script>
